layout e  botão funcionando

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Driven Eats</title>
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,10 +22,141 @@
             </div>
         </nav>
     </header>
+    <div class="container">
+        <div class="items-container">
+            <h1>Primeiro, seu prato</h1>
+            <div class="items">
+                <div id="item1" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <div>R$<p id="preço1">14,90</p></div>
+                </div>
+                <div id="item2" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <div>R$<p id="preço2">14,90</p></div>
+                </div>
+                <div id="item3" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <div>R$<p id="preço3">14,90</p></div>
+                </div>
+                <div id="item4" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <div>R$<p id="preço4">14,90</p></div>
+                </div>
+                <div id="item5" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <div>R$<p id="preço5">14,90</p></div>
+                </div>
+                <div id="item6" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <p>Um pouco de batata, um pouco de salada</p>
+                    <div>R$<p id="preço6">14,90</p></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="items-container">
+            <h1>Agora, sua bebida</h1>
+            <div class="items">
+                <div id="item12" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <h3>Coca-Cola</h3>
+                    <p>Vestida de branco ou do  jeito que você preferir!!</p>
+                    <div>R$<p id="preço12">5,00</p></div>
+                </div>
+                <div id="item2-2"class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <h3>Coca-Cola</h3>
+                    <p>Vestida de branco ou do  jeito que você preferir!!</p>
+                    <div>R$<p id="preço22">5,00</p></div>
+                </div>
+                <div id="item3-2" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <h3>Coca-Cola</h3>
+                    <p>Vestida de branco ou do  jeito que você preferir!!</p>
+                    <div>R$<p id="preço32">5,00</p></div>
+                </div>
+                <div id="item42" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <h3>Coca-Cola</h3>
+                    <p>Vestida de branco ou do  jeito que você preferir!!</p>
+                    <div>R$<p id="preço42">5,00</p></div>
+                </div>
+                <div id="item52" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <h3>Coca-Cola</h3>
+                    <p>Vestida de branco ou do  jeito que você preferir!!</p>
+                    <div>R$<p id="preço52">5,00</p></div>
+                </div>
+                <div id="item62" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <h3>Coca-Cola</h3>
+                    <p>Vestida de branco ou do  jeito que você preferir!!</p>
+                    <div>R$<p id="preço62">5,00</p></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="items-container">
+            <h1>Por fim, sua sobremesa</h1>
+            <div class="items">
+                <div id="item13" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <h3>Pudim gostosinho, macio </h3>
+                    <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
+                    <div>R$<p id="preço13">4,00</p></div>
+                </div>
+                <div id="item23" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <h3>Pudim gostosinho, macio </h3>
+                    <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
+                    <div>R$<p id="preço23">4,00</p></div>
+                </div>
+                <div id="item33" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <h3>Pudim gostosinho, macio </h3>
+                    <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
+                    <div>R$<p id="preço33">4,00</p></div>
+                </div>
+                <div id="item43" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <h3>Pudim gostosinho, macio </h3>
+                    <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
+                    <div>R$<p id="preço43">4,00</p></div>
+                </div>
+                <div id="item53" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <h3>Pudim gostosinho, macio </h3>
+                    <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
+                    <div>R$<p id="preço53">4,00</p></div>
+                </div>
+                <div id="item63" class="item" onclick="selection(id)">
+                    <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <h3>Pudim gostosinho, macio </h3>
+                    <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
+                    <div>R$<p id="preço63">4,00</p></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <footer>
-        <div id="checkout-button">Selecione 3 pedidos para fechar o  pedido</div>
+        <button  disabled onclick="send()" id="checkout-button">
+            <p>Selecione 3 pedidos para fechar o pedido</p>
+        </button>
     </footer>
+
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
