data-tests implementados versão beta2

--- a/index.html
+++ b/index.html
@@ -110,37 +110,37 @@
         <div class="items-container">
             <h1>Por fim, sua sobremesa</h1>
             <div class="items">
-                <div id="item13" class="item" onclick="selection(id)">
+                <div id="item13" data-test="dessert" class="item" onclick="selection(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço13">4,00</p></div>
                 </div>
-                <div id="item23" class="item" onclick="selection(id)">
+                <div id="item23"  data-test="dessert" class="item" onclick="selection(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price"  id="preço23">4,00</p></div>
                 </div>
-                <div id="item33" class="item" onclick="selection(id)">
+                <div id="item33" data-test="dessert" class="item" onclick="selection(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p  data-test="item-price" id="preço33">4,00</p></div>
                 </div>
-                <div id="item43" class="item" onclick="selection(id)">
+                <div id="item43" data-test="dessert"  class="item" onclick="selection(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço43">4,00</p></div>
                 </div>
-                <div id="item53" class="item" onclick="selection(id)">
+                <div id="item53"  data-test="dessert"  class="item" onclick="selection(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price"  id="preço53">4,00</p></div>
                 </div>
-                <div id="item63" class="item" onclick="selection(id)">
+                <div id="item63" data-test="dessert"  class="item" onclick="selection(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
@@ -152,7 +152,7 @@
 
     <footer>
         <button data-test="order-btn"  disabled onclick="send()" id="checkout-button">
-            <p>Selecione 3 pedidos para fechar o pedido</p>
+            <p>Selecione os 3 itens para fechar o pedido</p>
         </button>
     </footer>
 
