--- a/index.html
+++ b/index.html
@@ -26,37 +26,37 @@
         <div class="items-container">
             <h1>Primeiro, seu prato</h1>
             <div class="items">
-                <div data-test="dish" id="item1" class="item" onclick="selection(id)">
+                <div data-test="dish" id="item1" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço1">14,90</p></div>
                 </div>
-                <div  data-test="dish" id="item2" class="item" onclick="selection(id)">
+                <div  data-test="dish" id="item2" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <h3 data-test="item-name" >Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço2">14,90</p></div>
                 </div>
-                <div data-test="dish" id="item3" class="item" onclick="selection(id)">
+                <div data-test="dish" id="item3" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço3">14,90</p></div>
                 </div>
-                <div data-test="dish"  id="item4" class="item" onclick="selection(id)">
+                <div data-test="dish"  id="item4" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço4">14,90</p></div>
                 </div>
-                <div data-test="dish" id="item5" class="item" onclick="selection(id)">
+                <div data-test="dish" id="item5" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço5">14,90</p></div>
                 </div>
-                <div data-test="dish" id="item6" class="item" onclick="selection(id)">
+                <div data-test="dish" id="item6" class="item" onclick="seletionPratos(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
@@ -68,41 +68,41 @@
         <div class="items-container">
             <h1>Agora, sua bebida</h1>
             <div class="items">
-                <div data-test="drink" id="item12" class="item" onclick="selection(id)">
+                <div data-test="drink" id="item12" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
-                    <div>R$<p data-test="item-price" id="preço12">5,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço12">4,90</p></div>
                 </div>
-                <div data-test="drink" id="item2-2"class="item" onclick="selection(id)">
+                <div data-test="drink" id="item22"class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
-                    <div>R$<p data-test="item-price" id="preço22">5,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço22">4,90</p></div>
                 </div>
-                <div data-test="drink" id="item3-2" class="item" onclick="selection(id)">
+                <div data-test="drink" id="item32" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
-                    <div>R$<p data-test="item-price" id="preço32">5,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço32">4,90</p></div>
                 </div>
-                <div data-test="drink"  id="item42" class="item" onclick="selection(id)">
+                <div data-test="drink"  id="item42" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
-                    <div>R$<p data-test="item-price" id="preço42">5,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço42">4,90</p></div>
                 </div>
-                <div data-test="drink"  id="item52" class="item" onclick="selection(id)">
+                <div data-test="drink"  id="item52" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
-                    <div>R$<p data-test="item-price" id="preço52">5,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço52">4,90</p></div>
                 </div>
-                <div data-test="drink"  id="item62" class="item" onclick="selection(id)">
+                <div data-test="drink"  id="item62" class="item" onclick="selectionBebidas(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
-                    <div>R$<p data-test="item-price" id="preço62">5,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço62">4,90</p></div>
                 </div>
             </div>
         </div>
@@ -110,41 +110,41 @@
         <div class="items-container">
             <h1>Por fim, sua sobremesa</h1>
             <div class="items">
-                <div id="item13" data-test="dessert" class="item" onclick="selection(id)">
+                <div id="item13" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço13">4,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço13">7,90</p></div>
                 </div>
-                <div id="item23"  data-test="dessert" class="item" onclick="selection(id)">
+                <div id="item23"  data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price"  id="preço23">4,00</p></div>
+                    <div>R$<p data-test="item-price"  id="preço23">7,90</p></div>
                 </div>
-                <div id="item33" data-test="dessert" class="item" onclick="selection(id)">
+                <div id="item33" data-test="dessert" class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p  data-test="item-price" id="preço33">4,00</p></div>
+                    <div>R$<p  data-test="item-price" id="preço33">7,90</p></div>
                 </div>
-                <div id="item43" data-test="dessert"  class="item" onclick="selection(id)">
+                <div id="item43" data-test="dessert"  class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço43">4,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço43">7,90</p></div>
                 </div>
-                <div id="item53"  data-test="dessert"  class="item" onclick="selection(id)">
+                <div id="item53"  data-test="dessert"  class="item" onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price"  id="preço53">4,00</p></div>
+                    <div>R$<p data-test="item-price"  id="preço53">7,90</p></div>
                 </div>
-                <div id="item63" data-test="dessert"  class="item" onclick="selection(id)">
+                <div  id="63" data-test="dessert"  class="item " onclick="selectionDessert(id)">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
-                    <div>R$<p data-test="item-price" id="preço63">4,00</p></div>
+                    <div>R$<p data-test="item-price" id="preço63">7,90</p></div>
                 </div>
             </div>
         </div>
