--- a/index.html
+++ b/index.html
@@ -26,38 +26,44 @@
         <div class="items-container">
             <h1>Primeiro, seu prato</h1>
             <div class="items">
-                <div data-test="dish" id="item1" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item1" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <img id="itemcheck1" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço1">14,90</p></div>
                 </div>
-                <div  data-test="dish" id="item2" class="item" onclick="seletionPratos(id)">
+                <div  data-test="dish" id="item2" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <img  id="itemcheck2" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name" >Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço2">14,90</p></div>
                 </div>
-                <div data-test="dish" id="item3" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item3" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <img id="itemcheck3" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço3">14,90</p></div>
                 </div>
-                <div data-test="dish"  id="item4" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish"  id="item4" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <img id="itemcheck4" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço4">14,90</p></div>
                 </div>
-                <div data-test="dish" id="item5" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item5" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <img id="itemcheck5" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price" id="preço5">14,90</p></div>
                 </div>
-                <div data-test="dish" id="item6" class="item" onclick="seletionPratos(id)">
+                <div data-test="dish" id="item6" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
+                    <img id="itemcheck6" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Frango Yin Yang</h3>
                     <p>Um pouco de batata, um pouco de salada</p>
                     <div>R$<p data-test="item-price"  id="preço6">14,90</p></div>
@@ -68,38 +74,44 @@
         <div class="items-container">
             <h1>Agora, sua bebida</h1>
             <div class="items">
-                <div data-test="drink" id="item12" class="item" onclick="selectionBebidas(id)">
+                <div data-test="drink" id="item12" class="item" onclick="selectionBebidas(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <img id="itemcheck12" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço12">4,90</p></div>
                 </div>
-                <div data-test="drink" id="item22"class="item" onclick="selectionBebidas(id)">
+                <div data-test="drink" id="item22"class="item" onclick="selectionBebidas(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <img id="itemcheck22" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço22">4,90</p></div>
                 </div>
-                <div data-test="drink" id="item32" class="item" onclick="selectionBebidas(id)">
+                <div data-test="drink" id="item32" class="item" onclick="selectionBebidas(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <img id="itemcheck32" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço32">4,90</p></div>
                 </div>
-                <div data-test="drink"  id="item42" class="item" onclick="selectionBebidas(id)">
+                <div data-test="drink"  id="item42" class="item" onclick="selectionBebidas(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <img id="itemcheck42" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço42">4,90</p></div>
                 </div>
-                <div data-test="drink"  id="item52" class="item" onclick="selectionBebidas(id)">
+                <div data-test="drink"  id="item52" class="item" onclick="selectionBebidas(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <img id="itemcheck52" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço52">4,90</p></div>
                 </div>
-                <div data-test="drink"  id="item62" class="item" onclick="selectionBebidas(id)">
+                <div data-test="drink"  id="item62" class="item" onclick="selectionBebidas(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/coca-cola.png" alt="">
+                    <img id="itemcheck62"src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Coca-Cola</h3>
                     <p>Vestida de branco ou do  jeito que você preferir!!</p>
                     <div>R$<p data-test="item-price" id="preço62">4,90</p></div>
@@ -110,38 +122,44 @@
         <div class="items-container">
             <h1>Por fim, sua sobremesa</h1>
             <div class="items">
-                <div id="item13" data-test="dessert" class="item" onclick="selectionDessert(id)">
+                <div id="item13" data-test="dessert" class="item" onclick="selectionDessert(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <img id="itemcheck13" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço13">7,90</p></div>
                 </div>
-                <div id="item23"  data-test="dessert" class="item" onclick="selectionDessert(id)">
+                <div id="item23"  data-test="dessert" class="item" onclick="selectionDessert(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <img id="itemcheck23" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price"  id="preço23">7,90</p></div>
                 </div>
-                <div id="item33" data-test="dessert" class="item" onclick="selectionDessert(id)">
+                <div id="item33" data-test="dessert" class="item" onclick="selectionDessert(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <img  id="itemcheck33" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p  data-test="item-price" id="preço33">7,90</p></div>
                 </div>
-                <div id="item43" data-test="dessert"  class="item" onclick="selectionDessert(id)">
+                <div id="item43" data-test="dessert"  class="item" onclick="selectionDessert(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <img id="itemcheck43" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço43">7,90</p></div>
                 </div>
-                <div id="item53"  data-test="dessert"  class="item" onclick="selectionDessert(id)">
+                <div id="item53"  data-test="dessert"  class="item" onclick="selectionDessert(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <img id="itemcheck53"src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price"  id="preço53">7,90</p></div>
                 </div>
-                <div  id="63" data-test="dessert"  class="item " onclick="selectionDessert(id)">
+                <div  id="63" data-test="dessert"  class="item " onclick="selectionDessert(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/pudim.png" alt="">
+                    <img id="itemcheck63" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""  class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
                     <h3 data-test="item-name">Pudim gostosinho, macio </h3>
                     <p>Feito com  bastante leitinho ihh la ele kkkkkk</p>
                     <div>R$<p data-test="item-price" id="preço63">7,90</p></div>
