--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div>R$<p data-test="item-price" id="preço2">19,00</p>
                     </div>
                 </div>
-                <div data-test="dish" id="item3" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div  id="item3" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck3" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
@@ -54,7 +54,7 @@
                     <div>R$<p data-test="item-price" id="preço3">20,00</p>
                     </div>
                 </div>
-                <div data-test="dish" id="item4" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div  id="item4" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck4" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
@@ -63,7 +63,7 @@
                     <div>R$<p data-test="item-price" id="preço4">14,00</p>
                     </div>
                 </div>
-                <div data-test="dish" id="item5" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div  id="item5" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck5" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
@@ -72,7 +72,7 @@
                     <div>R$<p data-test="item-price" id="preço5">14,00</p>
                     </div>
                 </div>
-                <div data-test="dish" id="item6" class="item" onclick="seletionPratos(id)" style="position: relative;">
+                <div  id="item6" class="item" onclick="seletionPratos(id)" style="position: relative;">
                     <img src="./assets/images/projeto__driven-eats__imagens/frango_yin_yang.png" alt="">
                     <img id="itemcheck6" src="./assets/images/projeto__driven-eats__imagens/images.png" alt=""
                         class="d-none" style="border-radius: 100%; position: absolute; width: 20px; left: 120px">
